# dirview

./: .clang-format  .gitignore  ASTRA.md  CMakeLists.txt  README.md  dirview
.github/workflows/: ci.yml
debian/: changelog  control
debian/patches/: 0001-Add-CI-1.patch  0001-Version-1.2.0-6.patch  0001-Version-1.3.0-7.patch  0001-Version-1.3.1-8.patch  0001-chore-update-changelog-and-patches-for-v1.0.0-skip-c.patch  0001-chore-update-changelog-and-patches-for-v1.1.0-skip-c.patch  0001-feat-set-home-directory-as-root-show-hidden-files-an.patch  0002-Refactor-code-2.patch  0002-chore-update-changelog-and-patches-for-v1.1.0-skip-c.patch  0003-chore-update-changelog-and-patches-for-v1.0.0-skip-c.patch  0004-Refactor-3.patch
src/: main.cpp
src/fs/: FilterController.cpp  FilterController.h  FilterProxyModel.cpp  FilterProxyModel.h  FolderSizeProxyModel.cpp  FolderSizeProxyModel.h  ModelFactory.cpp  ModelFactory.h
src/ui/: DirectoryViewerWidget.cpp  DirectoryViewerWidget.h
src/utils/: CalculateSize.hpp  FilterProxyModel.hpp  Options.h  Options.hpp
